# memcached-windows

./: .appveyor.yml  .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  extstore.c  memcached.c  memcached.h  proto_text.c  restart.c  slabs.c  storage.c  testapp.c  thread.c  tls.c
.github/workflows/: benchmark.yml  ci.yml  valgrind.yml
mingw/: memcached.cbp  memcached.workspace  testapp.cbp
mingw/include/: conn_list.h  fcntl.h  mingw_logger.h  netdb.h  poll.h  signal.h  stdio.h  stdlib.h  sysexits.h  syslog.h  unistd.h  win_util.h
mingw/include/sys/: mman.h  resource.h  socket.h  uio.h
mingw/src/: conn_list.c  mingw_all.c  mingw_logger.c  mingw_mman.c  mingw_resource.c  mingw_signal.c  mingw_socket.c  mingw_stdio.c  mingw_stdlib.c  mingw_uio.c  mingw_unistd.c  syslog-client.c  win_util.c
mingw/t/: binary-extstore.t  binary-sasl.t  binary.t  chunked-extstore.t  daemonize.t  error-extstore.t  extstore-buckets.t  extstore-jbod.t  extstore.t  issue_260.t  issue_67.t  line-lengths.t  memtier_benchmark.json  metaget.t  restart.t  run_test_harness.sh  ssl_session_resumption.t  stats-conns.t  stats.t  unixsocket.t  watcher_connid.t  whitespace.t
mingw/t/lib/: MemcachedTest.pm
t/: issue_67.t  run_valgrind.sh  unixsocket.t  whitespace.t
t/lib/: MemcachedTest.pm
